# financial-doc-qa

./: .gitignore  .vercelignore  README.md  app.py  check_gemini.py  pyproject.toml  render.yaml  requirements.txt
