[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
langchain = ">=0.1.16"
langchain-google-genai = ">=0.1.0"
streamlit = ">=1.32.0"
faiss-cpu = ">=1.8.0"
pypdf = ">=4.1.0"
openpyxl = ">=3.1.2"
pandas = ">=2.2.1"
pymupdf = ">=1.24.0"
langchain-community = ">=0.0.32"
